--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,3 +45,9 @@ body {
     padding: 0;
   }
 }
+
+.MuiDateCalendar-root,
+.MuiMultiSectionDigitalClock-root,
+.MuiPickersLayout-actionBar {
+  background-color: #edf1ff;
+}
